Add front translation files

--- a/src/FrontBundle/Resources/public/less/custom.less
+++ b/src/FrontBundle/Resources/public/less/custom.less
@@ -48,7 +48,9 @@
 .main-nav li a:hover,.main-nav li a:focus{
     background-color: transparent!important;
 }
-
+.container-login{
+    padding: 5em 0;
+}
 /*********************/
 /******Language*******/
 /*********************/
