--- a/src/FrontBundle/Resources/views/Base/layout.html.twig
+++ b/src/FrontBundle/Resources/views/Base/layout.html.twig
@@ -49,14 +49,14 @@
                 </div>
                 <!-- /.container-fluid -->
             </nav>
-            <header id="home">
+            <header id="home" >
                 <div class="container">
                     <div class="table">
                         <div class="header-text">
                             <div class="row">
                                 <div class="col-md-12 text-center">
-                                    <h3 class="light white">Toma el control de tu presencia en internet</h3>
-                                    <h1 class="white typed">Tu felicidad nos hace felices</h1>
+                                    <h3 class="light white">{{ 'home.title' | trans }}</h3>
+                                    <h1 class="white typed">{{ 'home.subtitle' | trans }}</h1>
                                     <span class="typed-cursor">|</span>
                                 </div>
                             </div>
