--- a/src/FrontBundle/Resources/views/Base/layout.html.twig
+++ b/src/FrontBundle/Resources/views/Base/layout.html.twig
@@ -31,6 +31,7 @@
         'bundles/front/css/cardio.css'
         'bundles/front/less/custom.less'
         'bundles/admin/plugins/flagstrap/dist/css/flags.css'
+        'bundles/admin/plugins/iCheck/minimal/_all.css'
     %}
         <link rel="stylesheet" href="{{ asset_url }}">
     {% endstylesheets %}
@@ -120,6 +121,56 @@
             </div>
         {% endblock %}
         
+        {# POPUP #}
+        <div class="modal fade" id="modalRegister" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content modal-popup">
+                    <a href="#" class="close-link"><i class="icon_close_alt2"></i></a>
+                    <h3 class="white">Registrate</h3>
+                    <form action="" class="popup-form">
+                        <input type="text" class="form-control form-white" placeholder="Full Name">
+                        <input type="text" class="form-control form-white" placeholder="Email Address">
+                        <div class="dropdown">
+                            <button id="dLabel" class="form-control form-white dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Precios de Planes
+                            </button>
+                            <ul class="dropdown-menu animated fadeIn" role="menu" aria-labelledby="dLabel">
+                                <li class="animated lightSpeedIn"><a href="#">1 month membership ($150)</a></li>
+                                <li class="animated lightSpeedIn"><a href="#">3 month membership ($350)</a></li>
+                                <li class="animated lightSpeedIn"><a href="#">1 year membership ($1000)</a></li>
+                                <li class="animated lightSpeedIn"><a href="#">Free trial class</a></li>
+                            </ul>
+                        </div>
+                        <div class="checkbox-holder text-left">
+                            <div class="checkbox">
+                                <input type="checkbox" value="None" id="squaredOne" name="check" />
+                                <label for="squaredOne"><span>Estoy de acuerdo <strong>Terms &amp; Conditions</strong></span></label>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-submit">Enviar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="modalLogin" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content modal-popup">
+                    <a href="#" class="close-link"><i class="icon_close_alt2"></i></a>
+                    <h3 class="white">{{ 'login.account' | trans }}</h3>
+
+                    {{ login_form({
+                        form_class: 'popup-form',
+                        input_email_class: 'form-white',
+                        input_password_class: 'form-white',
+                        icheck_class: 'minimal-white',
+                        button_submit_class: 'btn-submit'
+                    }) }}
+                    
+                </div>
+            </div>
+        </div>
+                
         {% block javascripts %}
             {{ parent() }}
             {% javascripts
@@ -129,10 +180,26 @@
                 'bundles/front/js/jquery.onepagenav.js'
                 'bundles/front/js/main.js'
                 'bundles/admin/plugins/flagstrap/dist/js/jquery.flagstrap.min.js'
+                'bundles/admin/plugins/iCheck/icheck.min.js'
             %}
             <script type="text/javascript" src="{{ asset_url }}"></script>
             {% endjavascripts %}
            
+            <script>
+                //iCheck for checkbox and radio inputs
+                $('input[type="checkbox"].minimal, input[type="radio"].minimal').iCheck({
+                  checkboxClass: 'icheckbox_minimal-blue',
+                  radioClass: 'iradio_minimal-blue'
+                });
+                
+                $('input[type="checkbox"].minimal-white, input[type="radio"].minimal-white').iCheck({
+                  checkboxClass: 'icheckbox_minimal-white',
+                  radioClass: 'iradio_minimal-white'
+                });
+                $(document).ready(function(){
+                    
+                });
+            </script>
         {% endblock %}
     </body>
 {% endblock %}
