Add profile user

--- a/src/FrontBundle/Resources/public/less/custom.less
+++ b/src/FrontBundle/Resources/public/less/custom.less
@@ -117,68 +117,66 @@
         }
     }
 }
-/*
-
-#home{
-    h1, h2, h3, h4, h5, h6 {
-        font-family: 'Roboto', 'Avenir Next', 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif;
-        position: relative;
-        margin: 10px 0;
-    }
-
-    h1 {
-        font-size: 60px;
-    }
-
-    h2 {
-        font-size: 48px;
-    }
-
-    h3 {
-        font-size: 30px;
-    }
-
-    h4 {
-        font-size: 24px;
-    }
-
-    h5 {
-        font-size: 18px;
-    }
-
-    h6 {
-        font-size: 16px;
-    }
-}
-h5 {
-    font-size: 18px;
-}
-
-h6 {
-    font-size: 16px;
-}
-.owl-pagination{
-    line-height: 23px!important;
-}
-.main-nav li a:hover{
-    background-color: transparent!important;
-}
-.btn-primary{
-    color: #fff;
-    border-color: #fff;
-    background: transparent;
-}
-.btn-primary:hover {
-    color: #00a8ff;
-    background: #fff;
-    border-color: #fff;
-}
-*/
 .subscribe {
     .btn-primary{
         background: #00a8ff;
     }
     .btn-primary:hover{
         color: #fff;
+    }
+}
+.profile-menu {
+    padding: 0px;
+    border: none;
+    button{
+        font-size: 16px;
+        background: transparent;
+        border: none;
+        padding: 14px 30px;
+        box-shadow: none;
+    }
+    .dropdown-menu > li > a{
+        padding: 14px 30px;
+    }
+}
+.core-body{
+    .container > .navbar-collapse{
+        padding: 0;
+    }
+    .navbar{
+        top: 0;
+        padding: 25px 0 15px;
+    }
+    .navbar-fixed-top{
+        padding: 25px 0 15px!important;
+    }
+    header#home{
+        height: 100px;
+    }
+}
+.core-body.home .navbar{
+    top: 50px;
+    padding: 0px;
+}
+.container-profile {
+    .profile-img {   
+        padding: 15px 0 0!important;
+        img {
+            width: 65%!important;
+        }
+    }
+    .profile-desc h1{
+        font-size: 48px;
+    }   
+    .select-image-button{
+        color: #444;
+        font-size: 14px;
+    }
+    .paddingForFloat{
+        padding-right: 0px;
+    }
+    .borderMenuProfile{
+        border-top: 1px solid #ddd;
+        padding: 20px 40px;
     }
 }
