--- a/src/FrontBundle/Resources/views/Base/layout.html.twig
+++ b/src/FrontBundle/Resources/views/Base/layout.html.twig
@@ -50,20 +50,9 @@
                 </div>
                 <!-- /.container-fluid -->
             </nav>
+            
             <header id="home" >
-                <div class="container">
-                    <div class="table">
-                        <div class="header-text">
-                            <div class="row">
-                                <div class="col-md-12 text-center">
-                                    <h3 class="light white">{{ 'home.title' | trans }}</h3>
-                                    <h1 class="white typed">{{ 'home.subtitle' | trans }}</h1>
-                                    <span class="typed-cursor">|</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% block header_content %}{% endblock %}
             </header>
         {% endblock %}
         
