Styles recovery missing

--- a/src/FrontBundle/Resources/public/less/custom.less
+++ b/src/FrontBundle/Resources/public/less/custom.less
@@ -250,3 +250,11 @@
     }
 }
 
+/*********************/
+/*****ECOMMERCE*******/
+/*********************/
+.cart-detail, .identification{
+    
+    padding: 5em 0;
+    
+}
