--- a/src/FrontBundle/Resources/public/css/cardio.css
+++ b/src/FrontBundle/Resources/public/css/cardio.css
@@ -206,28 +206,28 @@ nav.navbar-fixed-top .navbar-nav > li > a:not(.btn) {
 /* Buttons */
 
 .btn {
-	font-size: 18px;
-	display: inline-block;
-	padding: 15px 30px;
-	color: white;
-	border: 2px solid transparent;
-	border-radius: 2px;
-	background: transparent;
-	-webkit-transition: all 0.3s ease;
-	transition: all 0.3s ease;
+    font-size: 18px;
+    display: inline-block;
+    padding: 15px 30px;
+    color: white;
+    /*border: 2px solid transparent;
+    border-radius: 2px;
+    background: transparent;*/
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
 }
 
 .btn:hover,
 .btn:focus {
-	color: white;
+    color: white;
 }
 
 .btn.btn-blue {
-	background: #00a8ff;
+    background: #00a8ff;
 }
 
 .btn.btn-blue:hover,  .btn.btn-blue:focus{
-	/*background: #31b9ff;*/
+    /*background: #31b9ff;*/
 }
 
 .btn.btn-blue-fill {
