More profile fixes

--- a/src/FrontBundle/Resources/public/less/custom.less
+++ b/src/FrontBundle/Resources/public/less/custom.less
@@ -248,6 +248,33 @@
         border-top: 1px solid #ddd;
         padding: 20px 40px;
     }
+    form[name="profile_user"], form[name="password"]{
+        label{
+            padding: 23px 15px;
+        }
+        input[type="text"], input[type="email"], input[type="password"]{
+            background: #29323b;
+            color: #fff;
+        }
+    }
+    .tabs-left li a{
+        padding: 15px 20px;
+    }
+    .profile {
+        h3{
+            margin-bottom: 30px
+        }
+        .account>div{
+            margin-bottom: 50px;
+        }
+        p{
+            //padding: 7px 20px 15px 0;
+        }
+    }
+    .profile-img>div{
+        padding: 10px 0;
+    }
+    
 }
 
 /*********************/
