--- a/src/FrontBundle/Resources/public/less/custom.less
+++ b/src/FrontBundle/Resources/public/less/custom.less
@@ -16,6 +16,7 @@
     color: white;
 }
 .btn-core{
+    color: #fff;
     padding: 6px 12px;
     font-size: 14px;
     background: #00a8ff;
@@ -30,6 +31,14 @@
     touch-action: manipulation;
     cursor: pointer;
     -webkit-user-select: none;
+}
+.form-errors{
+    padding: 0;
+    list-style: none;
+}
+
+.btn-core:hover{
+    color: #fff;
 }
 .owl-pagination{
     line-height: 23px!important;
@@ -290,6 +299,7 @@
             border-left: 1px solid #ccc;
             margin-left: -1px;
             z-index: 0;
+            min-height: 350px;
             h3{
                 margin-bottom: 30px
             }
