--- a/src/FrontBundle/Resources/public/less/custom.less
+++ b/src/FrontBundle/Resources/public/less/custom.less
@@ -193,6 +193,20 @@
 /*********************/
 /******REGISTER*******/
 /*********************/
+#modalRegister .modal-popup{
+    overflow: auto;
+}
+form.popup-form[name="registration"]{
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    max-width: 500px;
+    .col-md-4{
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+}
 .container-register{
     h2{
         text-align: center;
@@ -241,99 +255,6 @@
     .btn-primary:hover{
         color: #fff;
     }
-}
-
-/*********************/
-/*******PROFILE*******/
-/*********************/
-.container-profile {
-    .profile-img {   
-        padding: 15px 0 0!important;
-        img {
-            width: 65%!important;
-        }
-    }
-    .profile-desc h1{
-        font-size: 48px;
-    }   
-    .select-image-button{
-        color: #444;
-        font-size: 14px;
-    }
-    .paddingForFloat{
-        padding-right: 0px;
-    }
-    .borderMenuProfile{
-        border-top: 1px solid #ddd;
-        padding: 20px 40px;
-    }
-    
-    .tabs-left{
-        background: white;
-        margin-right: 1px;
-        min-height: 300px;
-        border-right: none;
-        z-index: 9;
-        position: inherit;
-        li.active{
-            background: white;
-        }
-        li a{
-            padding: 15px 20px;
-        }  
-        li>a:hover {
-            background-color: transparent;
-            color: #000;
-            border-color: #eeeeee #ddd #eeeeee #eeeeee;
-        }
-    } 
-    .tabs-content{
-        padding-left: 0px;
-        h1{
-            font-size: 40px;
-            margin-bottom: 20px;
-        }
-        .tab-content{
-            padding: 20px 0 0 20px;
-            border-top: 1px solid #ccc;
-            border-left: 1px solid #ccc;
-            margin-left: -1px;
-            z-index: 0;
-            min-height: 350px;
-            h3{
-                margin-bottom: 30px
-            }
-            form{
-                label{
-                    padding: 23px 15px;
-                }
-                input, select{
-                    background: #29323b;
-                    color: #fff;
-                }
-            }
-            .delivery-form, .address{
-                padding: 0;
-            }
-            .add-delivery{
-                margin-top: 4px;
-            }
-        }  
-    }
-    
-    .profile,  {
-        
-        .account>div{
-            margin-bottom: 50px;
-        }
-        p{
-            //padding: 7px 20px 15px 0;
-        }
-    }
-    .profile-img>div{
-        padding: 10px 0;
-    }
-    
 }
 
 /*********************/
