--- a/src/FrontBundle/Resources/views/Base/layout.html.twig
+++ b/src/FrontBundle/Resources/views/Base/layout.html.twig
@@ -33,6 +33,7 @@
         'bundles/admin/plugins/flagstrap/dist/css/flags.css'
         'bundles/admin/plugins/iCheck/minimal/_all.css'
         'http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css'
+        'bundles/core/less/pages/oauth.less'
     %}
         <link rel="stylesheet" href="{{ asset_url }}">
     {% endstylesheets %}
@@ -112,51 +113,23 @@
         {% endblock %}
         
         {# POPUP #}
-        <div class="modal fade" id="modalRegister" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content modal-popup">
-                    <a href="#" class="close-link"><i class="icon_close_alt2"></i></a>
-                    <h3 class="white">Registrate</h3>
-                    
-                    {{ register_form({
-                        form_class: 'popup-form',
-                        input_class: 'form-white',
-                        icheck_class: 'minimal-white',
-                        button_submit_class: 'btn-submit'
-                    },'short') }}
-                    
-                    {#<form action="" class="popup-form">
-                        <input type="text" class="form-control form-white" placeholder="Full Name">
-                        <input type="text" class="form-control form-white" placeholder="Email Address">
-                        <div class="dropdown">
-                            <button id="dLabel" class="form-control form-white dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Precios de Planes
-                            </button>
-                            <ul class="dropdown-menu animated fadeIn" role="menu" aria-labelledby="dLabel">
-                                <li class="animated lightSpeedIn"><a href="#">1 month membership ($150)</a></li>
-                                <li class="animated lightSpeedIn"><a href="#">3 month membership ($350)</a></li>
-                                <li class="animated lightSpeedIn"><a href="#">1 year membership ($1000)</a></li>
-                                <li class="animated lightSpeedIn"><a href="#">Free trial class</a></li>
-                            </ul>
-                        </div>
-                        <div class="checkbox-holder text-left">
-                            <div class="checkbox">
-                                <input type="checkbox" value="None" id="squaredOne" name="check" />
-                                <label for="squaredOne"><span>Estoy de acuerdo <strong>Terms &amp; Conditions</strong></span></label>
-                            </div>
-                        </div>
-                        <button type="submit" class="btn btn-submit">Enviar</button>
-                    </form>#}
-                </div>
-            </div>
-        </div>
-
+        {#TODO (this twig function does not accept multiple anidation param in function)#}
+        {# lofin_modal_form({ params: { 
+            oauth:{ 
+                no_text: true
+            }, 
+            form_attr:{
+                form_class: 'popup-form',
+                input_email_class: 'form-white',
+                input_password_class: 'form-white',
+                icheck_class: 'minimal-white',
+                button_submit_class: 'btn-submit'
+            } } }) #}
         <div class="modal fade" id="modalLogin" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content modal-popup">
-                    <a href="#" class="close-link"><i class="icon_close_alt2"></i></a>
+                    <a href="#" class="close-link"><span class="glyphicon glyphicon-remove-sign"></span></a>
                     <h3 class="white">{{ 'login.account' | trans }}</h3>
-
                     {{ login_form({
                         form_class: 'popup-form',
                         input_email_class: 'form-white',
@@ -164,10 +137,52 @@
                         icheck_class: 'minimal-white',
                         button_submit_class: 'btn-submit'
                     }) }}
-                    
+                    <h4 class="white">o accede con tu red social</h4>
+                    <div class="oauth-buttons">{{ oauth_buttons({no_text: true}) }}</div>
                 </div>
             </div>
         </div>
+        <div class="modal fade" id="modalRegister" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content modal-popup">
+                    <a href="#" class="close-link"><span class="glyphicon glyphicon-remove-sign"></span></a>
+                    <h3 class="white">Registrate</h3>
+                    {{ register_form({
+                        form_class: 'popup-form',
+                        input_email_class: 'form-white',
+                        input_password_class: 'form-white',
+                        icheck_class: 'minimal-white',
+                        button_submit_class: 'btn-submit'
+                    }, 'short') }}
+                    <h4 class="white">o accede con tu red social</h4>
+                    <div class="oauth-buttons">{{ oauth_buttons({no_text: true}) }}</div>
+                </div>
+            </div>
+        </div>
+        
+        {#<form action="" class="popup-form">
+            <input type="text" class="form-control form-white" placeholder="Full Name">
+            <input type="text" class="form-control form-white" placeholder="Email Address">
+            <div class="dropdown">
+                <button id="dLabel" class="form-control form-white dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Precios de Planes
+                </button>
+                <ul class="dropdown-menu animated fadeIn" role="menu" aria-labelledby="dLabel">
+                    <li class="animated lightSpeedIn"><a href="#">1 month membership ($150)</a></li>
+                    <li class="animated lightSpeedIn"><a href="#">3 month membership ($350)</a></li>
+                    <li class="animated lightSpeedIn"><a href="#">1 year membership ($1000)</a></li>
+                    <li class="animated lightSpeedIn"><a href="#">Free trial class</a></li>
+                </ul>
+            </div>
+            <div class="checkbox-holder text-left">
+                <div class="checkbox">
+                    <input type="checkbox" value="None" id="squaredOne" name="check" />
+                    <label for="squaredOne"><span>Estoy de acuerdo <strong>Terms &amp; Conditions</strong></span></label>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-submit">Enviar</button>
+        </form>#}
+
                 
         {% block javascripts %}
             {{ parent() }}
