--- a/src/FrontBundle/Resources/views/Base/layout.html.twig
+++ b/src/FrontBundle/Resources/views/Base/layout.html.twig
@@ -33,7 +33,6 @@
         'bundles/admin/plugins/flagstrap/dist/css/flags.css'
         'bundles/admin/plugins/iCheck/minimal/_all.css'
         'http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css'
-        'bundles/core/less/pages/oauth.less'
     %}
         <link rel="stylesheet" href="{{ asset_url }}">
     {% endstylesheets %}
@@ -149,8 +148,7 @@
                     <h3 class="white">Registrate</h3>
                     {{ register_form({
                         form_class: 'popup-form',
-                        input_email_class: 'form-white',
-                        input_password_class: 'form-white',
+                        input_class: 'form-white',
                         icheck_class: 'minimal-white',
                         button_submit_class: 'btn-submit'
                     }, 'short') }}
