Fix own oauth style cutton

--- a/src/FrontBundle/Resources/public/less/custom.less
+++ b/src/FrontBundle/Resources/public/less/custom.less
@@ -163,7 +163,7 @@
     }
     .oauth-buttons{
         padding: 0 50px;
-        display: inline-block;
+        display: flex;
     }
     form[name="login"], form[name="registration_short"]{
         margin: 10px 60px auto;
