More change extra added

--- a/src/FrontBundle/Resources/views/Base/menu.html.twig
+++ b/src/FrontBundle/Resources/views/Base/menu.html.twig
@@ -37,7 +37,7 @@
                   <span class="glyphicon glyphicon-user"></span> {{ app.user.name }} <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu">
-                  <li><a href="{{ path('core_actor_profile') }}" style="display: block;">Perfil</a></li>
+                  <li><a href="{{ path('core_baseactor_profile') }}" style="display: block;">Perfil</a></li>
                   <li><a href="{{ path('logout') }}" style="display: block;">Cerrar sesión</a></li>
                 </ul>
               </div>
