--- a/src/FrontBundle/Resources/views/Front/index.html.twig
+++ b/src/FrontBundle/Resources/views/Front/index.html.twig
@@ -1,4 +1,4 @@
-{% extends core['extended_layout'] ? core['extended_layout'] : 'CoreBundle:Base:base.layout.html.twig' %}
+{% extends twig_global.getParameter('extended_layout') ? twig_global.getParameter('extended_layout') : 'CoreBundle:Base:base.layout.html.twig' %}
 {% block body_class %}home{% endblock %}
 
 {% block header_content %}
