Update index template

--- a/src/FrontBundle/Resources/views/Front/index.html.twig
+++ b/src/FrontBundle/Resources/views/Front/index.html.twig
@@ -17,79 +17,81 @@
     </div>
 {% endblock %}
 
-{% block content %}
-
-    <section>
-        <div class="cut cut-top" style="border-right: 30px solid #f7f7f7"></div>
-        <!--<div class="container">
-            <div class="row intro-tables">
-                <div class="col-md-8">
-                    <div class="intro-table intro-table-hover">
-                        <h5 class="white heading hide-hover">Membrecia Premium</h5>
-                        <div class="bottom">
-                            <h4 class="white heading small-heading no-margin regular">Registrate Hoy</h4>
-                            <h4 class="white heading small-pt">20% de Descuento</h4>
-                            <a href="#" class="btn btn-white-fill expand">Registrate</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="intro-table intro-table-third">
-                        <h5 class="white heading">Clientes felices</h5>
-                        <div class="owl-testimonials bottom">
-                            <div class="item">
-                                <h4 class="white heading content">No puedo estar mas felíz de los resultados!</h4>
-                                <h5 class="white heading light author">Adam Jordan</h5>
-                            </div>
-                            <div class="item">
-                                <h4 class="white heading content">Ahora puedo presentarme profesionalmente con mucho orgullo!</h4>
-                                <h5 class="white heading light author">Greg Pardon</h5>
-                            </div>
-                            <div class="item">
-                                <h4 class="white heading content">Mis ventas han mejorado notoriamente.</h4>
-                                <h5 class="white heading light author">Christina Goldman</h5>
+{% block container_content %}
+<div class="container-fluid">
+    <div class="row">
+        <section>
+            <div class="cut cut-top" style="border-right: 30px solid #f7f7f7"></div>
+            <!--<div class="container">
+                <div class="row intro-tables">
+                    <div class="col-md-8">
+                        <div class="intro-table intro-table-hover">
+                            <h5 class="white heading hide-hover">Membrecia Premium</h5>
+                            <div class="bottom">
+                                <h4 class="white heading small-heading no-margin regular">Registrate Hoy</h4>
+                                <h4 class="white heading small-pt">20% de Descuento</h4>
+                                <a href="#" class="btn btn-white-fill expand">Registrate</a>
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-4">
+                        <div class="intro-table intro-table-third">
+                            <h5 class="white heading">Clientes felices</h5>
+                            <div class="owl-testimonials bottom">
+                                <div class="item">
+                                    <h4 class="white heading content">No puedo estar mas felíz de los resultados!</h4>
+                                    <h5 class="white heading light author">Adam Jordan</h5>
+                                </div>
+                                <div class="item">
+                                    <h4 class="white heading content">Ahora puedo presentarme profesionalmente con mucho orgullo!</h4>
+                                    <h5 class="white heading light author">Greg Pardon</h5>
+                                </div>
+                                <div class="item">
+                                    <h4 class="white heading content">Mis ventas han mejorado notoriamente.</h4>
+                                    <h5 class="white heading light author">Christina Goldman</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>-->
-    </section>
-    {% set items = get_menu_items(true) %}
-    {% for item in items %}
-        <section id="{{item.slug}}" class="section {{item.className}}">
-            <div class="container">
+            </div>-->
+        </section>
+        {% set items = get_menu_items(true) %}
+        {% for item in items %}
+            <section id="{{item.slug}}" class="section {{item.className}}">
+                <div class="container">
+                    <div class="row title text-center">
+                        <h2>{{item.name}}</h2>
+                        <h4 class="light muted">{{item.shortDescription | raw}}</h4>
+                    </div>
+                    <div class="row">
+                        {{item.description | raw }}
+                    </div>
+                </div>
+                {% if item.id == 2 %}<div class="cut cut-bottom"></div>{% endif %}
+            </section>
+        {% endfor %}        
+   
+        <!-- Blog -->
+        <section id="_blog" class="section">
+            <div class="cut cut-top"></div>
+            <div class="container container-blog">
                 <div class="row title text-center">
-                    <h2>{{item.name}}</h2>
-                    <h4 class="light muted">{{item.shortDescription | raw}}</h4>
+                    <h2>Blog</h2>
+                    <h4 class="light muted">{{ 'home.blog.title' | trans }}</h4>
                 </div>
                 <div class="row">
-                    {{item.description | raw }}
+                    <div class="col-md-8 post-list" id="post-list">
+                        {{ blog_list() }}
+                    </div>
+                    <div class="col-md-4 post-sidebar">
+                      {% include 'BlogBundle:Blog:sidebar.html.twig'%}
+                    </div>
                 </div>
             </div>
-            {% if item.id == 2 %}<div class="cut cut-bottom"></div>{% endif %}
         </section>
-    {% endfor %}        
-   
-    <!-- Blog -->
-    <section id="_blog" class="section">
-        <div class="cut cut-top"></div>
-        <div class="container container-blog">
-            <div class="row title text-center">
-                <h2>Blog</h2>
-                <h4 class="light muted">{{ 'home.blog.title' | trans }}</h4>
-            </div>
-            <div class="row">
-                <div class="col-md-8 post-list" id="post-list">
-                    {{ blog_list() }}
-                </div>
-                <div class="col-md-4 post-sidebar">
-                  {% include 'BlogBundle:Blog:sidebar.html.twig'%}
-                </div>
-            </div>
-        </div>
-    </section>
-
+    </div>
+</div>
 
 {% endblock %}
  
