--- a/src/FrontBundle/Resources/views/Base/layout.html.twig
+++ b/src/FrontBundle/Resources/views/Base/layout.html.twig
@@ -58,12 +58,13 @@
             </header>
         {% endblock %}
         
-        <div class="container-fluid">
+        {% block container_content %}
+        <div class="container">
             <div class="row">
                 {% block content %}{% endblock %}
             </div>
         </div>
-            
+        {% endblock %}    
             
          
         
